fix: update overlap text responsive tab and conditional render GPU menu

--- a/joi/src/core/Tabs/styles.scss
+++ b/joi/src/core/Tabs/styles.scss
@@ -35,6 +35,7 @@
     flex: 1;
     height: 38px;
     display: flex;
+    white-space: nowrap;
     color: hsla(var(--text-secondary));
     align-items: center;
     justify-content: center;
